--- a/README
+++ b/README
@@ -4,3 +4,10 @@
 - Ruby v. 1.9.3p429 (2013-05-15 revision 40747) [x86_64-darwin12.3.0]
 - Rake v. 10.1.0
 - RSpec v. 2.14.3
+
+# Usage
+
+To use this app, type this command into your terminal:
+
+```
+ruby PATH/TO/app.rb
